test: add comprehensive test coverage for V4.2 (24 new test files)
Phase 1 - Service layer (10 files):
- InventoryServiceTest: adjustStock IN/OUT/ADJUST, optimistic lock, getTotalStock
- RoleServiceTest: CRUD, system role protection, circular inheritance detection
- RolePermissionServiceTest: assign/remove/batch-replace permissions
- PermissionServiceTest: CRUD, buildMenuTree, getPermissionsByType
- PermissionCacheServiceTest: cache eviction strategies, getCacheStats
- SystemConfigServiceTest: getConfigValue (cached), type conversion, updateConfigValue
- ExcelImportServiceTest: xlsx parsing, format validation, empty row skipping
- SalesEntryServiceTest: downloadTemplate, importExcel, getBatchOptions (FEFO)
- PurchaseOrderServiceTest: 3-stage workflow, rollback, status machine
- StockPredictionServiceTest: reorder suggestion, timezone (UTC→London), urgency

Phase 2 - Controller layer (5 files):
- InventoryControllerTest: adjustStock, getTotalStock, error handling
- PurchaseOrderControllerTest: 7 endpoints, Excel upload, STAFF masking
- StockPredictionControllerTest: reorder suggestions, urgent filter, health
- HealthCheckControllerTest: GET /health/check response validation
- GlobalExceptionHandlerTest: 7 exception types → HTTP status mapping

Phase 3 - Repository layer (8 files):
- ProductRepositoryTest: barcode, category, supplier, findLowStockProducts
- WarehouseRepositoryTest: code, isActive, countLocationsByWarehouseId
- LocationRepositoryTest: locationCode, zone, warehouseCode, countByZone
- StockTransactionRepositoryTest: product, transactionType, sumOutbound, dateRange
- PurchaseOrderRepositoryTest: poNumber, status pageable, datePrefix, soft delete
- SysRoleRepositoryTest: roleCode, roleType, findAllActive, findAllSystemRoles
- SysPermissionRepositoryTest: permissionCode, parentId, findAllActiveForTree
- InboundOrderRepositoryTest: orderNo, status, supplierId, applicantId, dateRange

Phase 4 - Utility (1 file):
- BatchCodeGeneratorTest: generate, decode, isV